fix(base): prevent side nav from overlapping main content (#5716)
Added `display: block` to `l-navigation-bar` to keep element in DOM and prevent layout shift at vanilla nav collapse breakpoint.

--- a/src/app/base/components/AppSideNavigation/_index.scss
+++ b/src/app/base/components/AppSideNavigation/_index.scss
@@ -35,4 +35,7 @@
       );
     }
   }
+  .l-navigation-bar {
+    display: block;
+  }
 }
